YTI-1085: First part of line wrap fixes for term display and editing. Semantic text editing box still untouched.

--- a/src/app/components/form/semantic-text-input.component.scss
+++ b/src/app/components/form/semantic-text-input.component.scss
@@ -16,6 +16,7 @@
 
   [contenteditable] {
 
+    word-wrap: break-word;
     overflow-wrap: break-word;
     height: auto;
 
