--- a/src/app/components/semantic-text/semantic-text-links.component.scss
+++ b/src/app/components/semantic-text/semantic-text-links.component.scss
@@ -7,5 +7,6 @@
 }
 
 [app-semantic-text-links-element] {
+  word-wrap: break-word;
   overflow-wrap: break-word;
 }
